<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/question_data_url"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/http_tednewardsandbox_site44_com_questions_json"
        android:hint="@string/enter_url"
        android:inputType="textUri"
        android:text="@string/http_tednewardsandbox_site44_com_questions_json" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/refresh_interval_minutes"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/intervalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/enter_interval_in_minutes"
        android:hint="@string/enter_interval_in_minutes"
        android:inputType="number"
        android:text="@string/_15" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>